--- a/tex/titlepages.tex
+++ b/tex/titlepages.tex
@@ -11,10 +11,15 @@
 
 
 \bigskip
-\Large{Translated from Russion by the LaRouche movement.}
+\Large{Translated from Russion by Pavel M. Penev for the LaRouche movement.}
 \foreignlanguage{russian}{\nocite{vernadsky1938thought-lib.ru}}
 
-October 20, 2010
+October 20, 2010--present
+
+\vfill
+
+\copyright\ 2012 Pavel M. Penev
+
 \end{center}
 
 \end{titlepage}
