foreword-yanshin: Daily commit.

--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -6,12 +6,16 @@ Vernadsky}\footnotemarkTransl
 \\[1ex]
 F.~T.\ Yanshina\\
 {\rm\normalsize Director-founder of the museum home of Academician V.~I.\ 
-Vernadsky}}%
+Vernadsky}\\[4ex]
+\begin{center}
+	\textit{The electronic version of the preface and the remarks was
+	prepared from the edition in the book
+	\fullcite{vernadsky1938thought-yanshin91}.}
+\end{center}
+}%
 \footnotetextTransl{\foreignlanguage{russian}{Комиссия по разработке научного
 наследия академика В.~И.\ Вернадского}}%
 
-The electronic version of the preface and the remarks was prepared from the
-edition in the book \fullcite{vernadsky1938thought-yanshin91}.
 
 \section*{Preface}
 
@@ -89,5 +93,18 @@ scientific problems noted by V.~I.\ Vernadsky was accepted.\footnote{See the
 information at the end of the book.}  Articles about him, and his multifaceted
 scientific work have appeared in almost all Soviet and international newspapers
 and magazines.
+
+Publishing house \rtitle{Nauka}\footnoteRus{Наука} released 4 volumes of works
+by V.~I.\ Vernadsky, as well as his \tciteo{vernadsky1988pisma}, including the
+book \tciteo{vernadsky1988filosofskie}, in which the work \rtitle{Scientific
+Thought as a Planetary Phenomenon} was republished as a first part, now
+published with reconstructions of all those passages cut out for its first
+edition in 1977 according to the archived original manuscript, before the very
+anniversary in February 1988.  The book was released in a 20,000 run.  The whole
+run was bought out during the very first days after its appearance in the
+bookstores' windows.  A barrage of letters requesting the release of an
+additional run of \tciteo{vernadsky1988filosofskie}, or at least of its first
+part, were received at the Scientific-publishing council of the Academy of
+Sciences of the USSR.\footnoteRus{Научно-издательский совет АН СССР}
 
 . . .
