--- a/tex/thought.bib
+++ b/tex/thought.bib
@@ -266,6 +266,31 @@
   hyphenation = {russian},
 }
 
+@book { vernadsky1988filosofskie,
+  title = {Философские мысли натуралиста},
+  userb = {Philosophycal Thoughts of the Naturalist},
+  author = {Владимир Иванович Вернадский},
+  year = {1988},
+  publisher = {Наука},
+  lccn={88162415},
+  url={http://books.google.com/books?id=69sxAAAAIAAJ},
+  hyphenation = {russian},
+}
+
+@book { vernadsky1988pisma,
+  title = {Письма Н. Е. Вернадской: 1886--1889},
+  userb = {Letters to N. E. Vernadskaya: 1886--1889},
+  author = {Владимир Иванович Вернадский and Наталия Егоровна Вернадская},
+  editor = {Филиппова, Н. В. and Борис Венедиктович Левшин},
+  isbn = {9785020031838},
+  lccn = {93105767},
+  series = {Письма Н. Е. Вернадской},
+  url = {http://books.google.com/books?id=UWi4AAAAIAAJ},
+  year = {1988},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
 @inbook { vernadsky1992trudy-p75-101,
   title = {Труды по биогеохимии и геохимии почв},
   author = {Владимир Иванович Вернадский and
