foreword-yanshin: Daily commit.

--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -107,4 +107,10 @@ additional run of \tciteo{vernadsky1988filosofskie}, or at least of its first
 part, were received at the Scientific-publishing council of the Academy of
 Sciences of the USSR.\footnoteRus{Научно-издательский совет АН СССР}
 
+The appearance of \tciteo{vernadsky1988filosofskie} in 1988 found a broad
+positive response from the press.  For example, the article
+\tciteo{lukyanov1988neizvestny} was published in the journal
+\ctciteo{lukyanov1988neizvestny} from September 29, 1988, in which the author
+F.~Lukyanov\footnoteRus{Ф. Лукьянов} wrote:
+
 . . .
