--- a/tex/thought.bib
+++ b/tex/thought.bib
@@ -268,7 +268,7 @@
 
 @book { vernadsky1988filosofskie,
   title = {Философские мысли натуралиста},
-  userb = {Philosophycal Thoughts of the Naturalist},
+  userb = {Philosophical Thoughts of the Naturalist},
   author = {Владимир Иванович Вернадский},
   year = {1988},
   publisher = {Наука},
@@ -631,4 +631,12 @@
   pages = {15},
   language = {russian},
   hyphenation = {russian},
+}
+
+@article { lukyanov1988neizvestny,
+  journal = {Известия},
+  title = {Неизвестный Вернадский},
+  userb = {The Unknown Vernadsky},
+  author = {Ф. Лукьянов},
+  date = {1988-09-29},
 }
