foreword-yanshin, chapter-01: Daily commit.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -1,2 +1,107 @@
-%\Chapter{}
-\refstepcounter{chapter}
+\part{Scientific Thought and Scientific Work as a Geological Force in the
+Biosphere}
+
+\Chapter{Man and mankind in the biosphere as a lawful part of its living
+matter, part of its organization.  Physical-chemical and geometric
+heterogeneity of the biosphere: the fundamental organizational
+distinction---material-energetic and temporal---of its living matter from its
+inert matter.  Evolution of the species, and evolution of the biosphere.  The
+manifestation of a new geological force in the biosphere---the scientific
+thought of social mankind.  Its manifestation is related to the ice age, in
+which we live, with one of the geological phenomena repeating in the history of
+the planet, whose cause exceeds the bounds of the Earth's crust.}
+
+
+\Section
+Man, as well as everything living, is not a self-sufficient, independent of the
+environment natural object.  However, even natural scientists in our time,
+counterposing human beings and living organisms in general to the environment
+of their life, very often do not take this into account.  But the
+inseparability between living organism and its environment cannot presently
+raise any doubt among contemporary naturalists.  The biogeochemist proceeds
+from it, and strives to understand, express, and establish this functional
+dependence precisely, and as deeply as possible.  Philosophers and contemporary
+philosophy predominantly do not take into account this functional dependence of
+man, as a natural object, and mankind, as a natural phenomenon, on the
+environment of their life and thought.
+
+Philosophy cannot sufficiently take this into account, as it proceeds from the
+laws of the mind, which is, in one way or another, a final and self-sufficient
+criterium for it (even in those cases, like in religious and mystical
+philosophies, in which the reach of the mind is, in fact, limited).
+
+The contemporary scientist, proceeding from the recognition of the reality of
+one's surroundings, of the world subject to one's investigation---nature, the
+cosmos, or world reality,\footnote{
+	I will talk about the reality of the cosmos, instead of that of nature,
+	here and further.  The concept nature, if we take it in a historical
+	aspect, is a complex concept.  It very often encompasses only the
+	biosphere, and it is more convenient to use it with just this meaning,
+	or even not to use it at all (\autoref{sec:6}).  This would correspond
+	to the vast majority of the uses of this concept historically in
+	natural science and in literature.  The concept `cosmos' can be,
+	perhaps, more conveniently applied to only the part of reality
+	encompassed by science, a philosophically pluralistic conception of
+	reality is possible at that, where there would be no single criterium
+	for the cosmos.
+}---cannot adopt this point of view as a basis for scientific work.
+
+Because one presently knows exactly that man is \emph{not} located on a
+structureless surface of the Earth, is \emph{not} located in direct contact
+with cosmic space in a structureless nature, which is not lawfully connected
+with him.  True, even the deeply penetrating contemporary naturalist often, out
+of routine and under the influence of philosophy, forgets this, and does not
+take it into account in his thought, and does not identify this.
+
+Man and mankind are most closely connected, above all, with the living matter
+inhabiting our planet, from which they cannot, in reality, be isolated by any
+physical process.  That is possible only in thought.
+
+
+\Section % 2
+
+. . .
+
+\Section % 3
+
+. . .
+
+\Section % 4
+
+. . .
+
+\Section % 5
+
+. . .
+
+\Section \label{sec:6} % 6
+
+. . .
+
+\Section % 7
+
+. . .
+
+\Section % 8
+
+. . .
+
+\Section % 9
+
+. . .
+
+\Section % 10
+
+. . .
+
+\Section % 11
+
+. . .
+
+\Section % 12
+
+. . .
+
+\Section % 13
+
+. . .
