--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -98,7 +98,7 @@ Publishing house \rtitle{Nauka}\footnoteRus{Наука} released 4 volumes of wo
 by V.~I.\ Vernadsky, as well as his \tciteo{vernadsky1988pisma}, including the
 book \tciteo{vernadsky1988filosofskie}, in which the work \rtitle{Scientific
 Thought as a Planetary Phenomenon} was republished as a first part, now
-published with reconstructions of all those passages cut out for its first
+published with reconstructions of all those passages abridged for its first
 edition in 1977 according to the archived original manuscript, before the very
 anniversary in February 1988.  The book was released in a 20,000 run.  The whole
 run was bought out during the very first days after its appearance in the
@@ -112,5 +112,22 @@ positive response from the press.  For example, the article
 \tciteo{lukyanov1988neizvestny} was published in the journal
 \ctciteo{lukyanov1988neizvestny} from September 29, 1988, in which the author
 F.~Lukyanov\footnoteRus{Ф. Лукьянов} wrote:
+\begin{quotation}
+  The name of academician Vladimir Ivanovich Vernadsky (1863--1945) cannot be
+  called unknown to the soviet reader.  However, he is still known among us in
+  his homeland mainly as scientist-naturalist, historian of science, and is
+  almost unknown as a thinker, philosopher, even though his philosophical
+  heritage has become a recognized phenomenon of European and world scientific
+  thought long ago.
+  
+  The just-released book by V. I. Vernadsky from publishing house \rtitle{Наука}
+  (\rtitle{Science}) \tciteo{vernadsky1988filosofskie} finally presents him
+  to\footnoteTransl{omitting `и'} our reading public as a philosohper and
+  thinker.  This book is, in essence, the first realization of a complete,
+  unabridged publication of the essential works of the Russian thinker, above
+  all the fundamental work \rtitle{Scientific Thought as a Planetary
+  Phenomenon}, created in the period between the 1880s and 1940s, and either
+  completely disappeared, or long ago become bibliographic rarity.
+\end{quotation}
 
 . . .
