Periodic commit: bib/: Split up <thought.bib> into more viewable files under <bib/>.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -12,7 +12,10 @@ which we live, with one of the geological phenomena repeating in the history of
 the planet, whose cause exceeds the bounds of the Earth's crust.}
 
 
-\Section
+\Section % 1
+% Inseparability of scientific thought from the living environment.
+% Inseparability of the concepts of nature & cosmos from the biosphere &
+% science.
 Man, as well as everything living, is not a self-sufficient, independent of the
 environment natural object.  However, even natural scientists in our time,
 counterposing human beings and living organisms in general to the environment
@@ -59,10 +62,106 @@ physical process.  That is possible only in thought.
 
 
 \Section % 2
+% We shall study the scientifically unambiguous 'living matter', and 'living
+% natural body', rather than 'life'.
+The concept of life and the living is clear to us in everyday life, and cannot
+raise scientifically serious doubts in the actual manifestations of it, and in
+natural objects corresponding to it---in natural bodies.  It was only in the
+$20^{\mathrm{th}}$ century [with the discovery of] filter-passing viruses that
+in science appeared facts, compelling us for the first time to ask
+seriously---not philosophically, but scientifically---the question: Are we
+dealing with a living natural body, or with a non-living natural body---an
+inert one?
 
-. . .
+With viruses the doubt is called for by scientific observations, rather than
+philosophical notions.  In this consists the great scientific significance of
+their study.  That is presently on a right and firm path.  The doubt will be
+resolved, and nothing, except a more precise notion of \emph{living organism},
+would give, with this approach couldn't fail to give \dots
+
+Along with this, however, we encounter another kind of doubts in
+\emph{science}, called for by philosophical and religious searches.  Thus, for
+example, phenomena, concerning the material-energetic environment of
+manifestations which are philosophically \emph{common} to both living and inert
+natural bodies, are scientifically studied in the works of the Bose Institute
+in Calcutta.\footnoteRus{Института Бозе в Калькутте}\footnoteEd{
+	The Bose
+	Institute\footnoteTransl{\url{http://www.boseinst.ernet.in/index.html}}
+	in Calcutta was founded by the Indian scientist Acharya Jagadish
+	Chandra Bose\footnoteRus{Бозе Джегдиш Чандра} (1858--1937) in 1917.
+	The institute studied the problems of physics, biophysics, inorganic
+	and organic chemistry, biochemistry, the physiology of plants,
+	selection, microbiology, etc. [---Ed.]
+} They are not characteristic of, are weakly expressed in inert natural bodies,
+and are strongly manifested in living ones, but are common to both.
+
+This area, if it exists in the form in which Bose tried to establish it, of
+phenomena common to inert and living natural bodies introduces nothing new in
+the sharp distinction between them.  The distinction must manifest itself in
+this area, as well, if only the latter's existence would be proven.
+
+We must approach phenomena here, as well, not in the aspect in which Bose
+approached them, not as phenomena of \emph{life}, but as phenomena of living
+natural bodies, of \emph{living matter}.
+
+To avoid any misunderstanding, I shall avoid the concepts `life', `living' in
+all further exposition, since, if we stepped outside those
+[phenomena],\footnoteTransl{inserted by transl. [---Pav]} we would inevitably
+go beyond the limits of the phenomena of life studied in science, into a
+foreign area or science---the area of philosophy, or, as is taking place in the
+Bose Institute, into a new area of new material-energetic manifestations common
+to all natural bodies of the biosphere, one lying outside the bounds of the
+fundamental question of living organism, and living matter, which we are
+presently interested in.
+
+I shall, therefore, avoid the terms and concepts `life', and `living', and
+limit the area which is subject to our investigation to the concepts
+\emph{`living natural body'}, and \emph{`living matter'}.  Each living organism
+\emph{in the biosphere}---natural object---is a living natural body.  \emph{The
+living matter of the biosphere is the complex of living organisms in it.}
+
+`Living matter', so defined, is a concept, completely precise, and fully
+encompassing the objects studied by biology and biogeochemistry.  It is simple,
+clear, and cannot raise any doubt.  We study only the living organism and its
+complexes in science.  They are scientifically identical with the concept of
+life.
+
 
 \Section % 3
+Man, like every living natural (or naturally occurring)\footnoteRus{природное
+(или естественное)} body, is inseparably connected with a certain geological
+envelope of our planet---\emph{the biosphere}, clearly distinct from the rest
+of its envelopes, with a structure which is determined by its specific
+\emph{state of organization},\footnoteTransl{организованностью, \ie\ 
+organizedness, or being (constantly) organized. [---Pav]} and occupying a
+lawfully expressible place in it as a distinct part of the whole.
+
+Living matter, just like the biosphere, possesses its peculiar state of
+organization, and can be viewed as a lawfully expressible \emph{function of the
+biosphere.}
+
+\emph{A state of organization} is not a mechanism.  It sharply differs from a
+mechanism in that it is constantly in a state of
+becoming,\footnoteTransl{становлении, \eg\ formation. [---Pav]} of motion of
+all of its smallest material and energetic particles.  We can express this
+state of organization in the course of time---in a generalization of mechanics,
+and in a simplified model---as being such that none of its points (material or
+energetic) lawfully returns to, ends up in a place, in a point of the biosphere
+which it occupied at any earlier moment.  It can return to one of them only on
+the order of mathematical accident, of very small probability.
+
+The Earth's envelope, the biosphere, embracing the whole globe, has clearly
+distinct dimensions, is determined to a large degree by the existence of living
+matter in it---\emph{populating}\footnoteRus{заселена} it.  There is a
+constant material and energetic exchange, materially expressed in the motion of
+atoms brought on by living matter, between its inert non-living part, its inert
+natural bodies, and the living matter inhabiting it.  This exchange in the
+course of time is expressed as lawfully changing, constantly tending toward the
+stability of an \emph{equilibrium}.\footnoteRus{равновесием}  The latter
+permeates the whole biosphere, and this \emph{biogenic flow of
+atoms}\footnoteRus{биогенный ток атомов} creates the biosphere to a large
+extent.  The biosphere is thus connected inseparably and inherently with the
+living matter populating it throughout the whole duration of geological time.
 
 . . .
 
