--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -5,7 +5,8 @@ the biosphere into the noosphere.  This evolution cannot be stopped by the
 course of global human history.  Scientific thought and mankind's daily lives
 as expressions of it.}
 
-14. We are not yet conscious of, we are not yet living the realization of the
+\Section % 14
+We are not yet conscious of, we are not yet living the realization of the
 full consequences of the astonishing, unprecedented times that mankind has
 entered during the 20th century.
 
@@ -93,7 +94,8 @@ existence is a function of it.  He carries it everywhere with himself.  And he
 inevitably changes it lawfully and unceasingly.
 
 
-15. Simultaneously with mankind's complete envelopment of the surface of the
+\Section % 15
+Simultaneously with mankind's complete envelopment of the surface of the
 biosphere---with its complete colonization,---which is closely connected
 with the achievements of scientfic thought, i.e. with the course of scientific
 thought in time, a scientific generalization, which scientifically reveals the
@@ -105,14 +107,14 @@ geologists.  True, the recognition of the geological significance of our social
 life has been expressed in a less clear form long ago, much earlier in the
 history of scientific thought.  However, at the beginning of our century C.
 Schuchert [1858--1942] in New
-Haven,\footnote{\fullcite{schuchert1933geology-p80}} and A.~P.\ Pavlov
-(1854--1929) in
-Moscow\footnote{\foreignlanguage{russian}{\fullcite{pavlov1936geologicheskaya-p105}}}
-independently accounted, geologically anew, for the long-known change which the
-emergence of human civilization introduces into the environment, onto the face
-of the Earth.  They considered it possible to take this manifestation of Homo
-sapiens as the basis for distinguishing \emph{a new geological epoch,} along
-with the tectonic and orogenic data which usually determine such divisions.
+Haven,\footcite[80]{schuchert1933geology} and A.~P.\ Pavlov (1854--1929) in
+Moscow\foreignlanguage{russian}{\footcite[с.~105 и
+сл.]{pavlov1936geologicheskaya}} independently accounted, geologically anew,
+for the long-known change which the emergence of human civilization introduces
+into the environment, onto the face of the Earth.  They considered it possible
+to take this manifestation of Homo sapiens as the basis for distinguishing
+\emph{a new geological epoch,} along with the tectonic and orogenic data which
+usually determine such divisions.
 
 They correctly tried to split the Pleistocene Epoch, defining its end by the
 beginning of the manifestation of mankind (during the recent hundred-somethng
@@ -154,7 +156,8 @@ thought about an age of more that 127 thousand years, Schuchert and Pavlov---of
 more than a billion years.
 
 
-16. We have already met with similar conceptions in philosophy long ago.
+\Section % 16
+We have already met with similar conceptions in philosophy long ago.
 Conceptions, which have been reached in another way---not by way of precise
 scientific observation and experimentation, like that of C. Schuchert, A. P.
 Pavlov, L. Agassiz (and J. Dana, who knew about the generalizations of
@@ -223,7 +226,8 @@ Geologists from the end of the 18th--beginning of the 19th century often relied
 on them in their current scientific work.
 
 
-17. The scientific constructs of Schuchert and Pavlov and all the scientific
+\Section % 17
+The scientific constructs of Schuchert and Pavlov and all the scientific
 work which---to a significant degree unconsciously---preceded them are
 essentially distinct from these philosophical constructs, which, however (this
 can be established historically), undoubtedly influence the course of
@@ -269,7 +273,8 @@ determination and clarification of the social tasks of mankind, and of the
 form of his organization.
 
 
-18. The question of the better organization of life and of the means by which
+\Section % 18
+The question of the better organization of life and of the means by which
 it could be accomplished has been raised numerous times during the
 multi-thousand-year historical tragedy full of blood, suffering, crime,
 destitution, hardship, which we call world history.  Man did not accept the
@@ -291,5 +296,118 @@ the course of millenia have not reached a unified explanation.
 All solutions reached in such a way transfer and have transferred the question
 in a different plane---from the domain of heard reality into the domain of
 ideal constructs.
+
+. . .
+
+
+\Section % 19
+
+. . .
+
+\Section % 20
+
+. . .
+
+\Section % 21
+
+. . .
+
+\Section % 22
+
+. . .
+
+\Section % 23
+
+. . .
+
+\Section % 24
+
+. . .
+
+\Section % 25
+
+. . .
+
+\Section % 26
+
+. . .
+
+\Section % 27
+
+. . .
+
+\Section % 28
+
+. . .
+
+\Section % 29
+
+. . .
+
+\Section % 30
+
+. . .
+
+\Section % 31
+
+. . .
+
+\Section % 32
+
+. . .
+
+\Section % 33
+
+. . .
+
+\Section % 34
+
+. . .
+
+\Section % 35
+
+. . .
+
+\Section % 36
+
+. . .
+
+\Section % 37
+
+. . .
+
+\Section % 38
+
+. . .
+
+\Section % 39
+
+. . .
+
+\Section % 40
+
+. . .
+
+\Section % 41
+
+. . .
+
+\Section % 42
+
+. . .
+
+\Section % 43
+
+. . .
+
+\Section % 44
+
+. . .
+
+\Section % 45
+
+. . .
+
+\Section % 46
 
 . . .
