--- a/tex/chapter-03.tex
+++ b/tex/chapter-03.tex
@@ -4,7 +4,9 @@ the geological history of the biosphere.  Its main characteristics: explosion
 of scientific work, change in the understanding of the fundamentals of reality,
 ecumenicism, and efficient, social manifestation of science.}
 
-47. What is presently occurring in the scientific movement can only be compared
+
+\Section % 47
+What is presently occurring in the scientific movement can only be compared
 with that scientific movement from the past of science, which was connected
 with the birth of Greek philosophy and science in the 6th--7th c.~BC.
 
@@ -59,7 +61,7 @@ our age---during the centuries closest to it, almost a thousand years ago.
 
 In essence, the basic fund of Helenic science---what I call a \emph{scientific
 apparatus}\footnote{
-	\foreignlanguage{russian}{\fullcite{vernadsky1939problemy2-p9-10}
+	\foreignlanguage{russian}{\fullcite[9--10]{vernadsky1939problemy2}
 	(Problems of Biogeochemistry II)}
 }---has reached us in miniscule fragments, passing, on top of it, through many
 centuries, in the remains of Aristotle's and Theophrastus's works on the
@@ -72,7 +74,8 @@ Broken for centuries, that already during the time of the Roman Empire, the
 threads were restored in the 17th century.
 
 
-48. The recent course of the history of science requires us to change
+\Section % 48
+The recent course of the history of science requires us to change
 our conceptions of that pre-Hellenic heritage, from which Hellenic science
 sprouted, as I already indicated (§42).
 
@@ -119,4 +122,6 @@ achievement---the rate at which it was achieved---turned out to be singular in
 time, and exceptional in its consequences in the noosphere.
 
 
-49. 
+\Section % 49
+
+. . .
