--- a/tex/chapter-07.tex
+++ b/tex/chapter-07.tex
@@ -26,8 +26,8 @@ our geological age, transformed the biosphere encompassed by mankind into a
 natural body, new in its geological and biological processes---into a new
 state, into the noosphere,\footnote{
 	\foreignlanguage{french}{\fullcite{leroy1928origines-p37-57}}
-} to whose consideration I shall return below.\footnoteEd{
-	See \foreignlanguage{russian}{\fullcite{vernadsky1987himicheskoe-ch21}}}
+} to whose consideration I shall return below.\footnote{
+	See \foreignlanguage{russian}{\cite[Гл.~21]{vernadsky1987himicheskoe}}}
 
 Its emergence in the history of the planet, beginning intensively (on the
 scale of historical time) a few tens of thousands of years ago, is an event of
@@ -103,7 +103,7 @@ energy\footnote{
 	without interruption for two years.  The concept has been presented by
 	me in print in numerous articles and books:
 	\begin{itemize}
-	  \item \foreignlanguage{russian}{\cite{vernadsky1926biosfera-p30-48}};
+	  \item \foreignlanguage{russian}{\cite[30--48]{vernadsky1926biosfera}};
 	  \item \foreignlanguage{french}{\cite{vernadsky1926etudes1,
 		  vernadsky1927etudes2}};
 	  \item \foreignlanguage{russian}{\cite{vernadsky1926razmnozhenii1},
@@ -114,7 +114,7 @@ energy\footnote{
 	\end{itemize}
 	[Ed.:] For the R.~Rosethal fund's report
 	\foreignlanguage{russian}{\rtitle{Живое вещество в биосфере}} see:
-	\foreignlanguage{russian}{\cite{vernadsky1994zhivoe-p555-602}}
+	\foreignlanguage{russian}{\cite[555--602]{vernadsky1994zhivoe}}
 }---encompasses the whole biosphere and generally determines all of its
 history.  It gives rise to and sharply changes the intensity of the migration
 of chemical elements constituting the biosphere, and determines their
@@ -138,12 +138,11 @@ analysis.  But it is now necessary to sketch its manifestation on the planet.
 This form of biogeochemical energy is characteristic not only of Homo sapiens,
 but also of all other living
 organisms.\footnote{
-	\foreignlanguage{russian}{\cite{vernadsky1926biosfera-p30-48}}.  See
-	\foreignlanguage{russian}{\cite{vernadsky1994zhivoe-p330-341,
-	vernadsky1926razmnozhenii1, vernadsky1926razmnozhenii2}}.  Published
-	under the title \foreignlanguage{russian}{\rtitle{О размножении
-	организмов и его значении в строении биосферы}} in the book
-	\foreignlanguage{russian}{\cite{vernadsky1992trudy-p75-101}}.
+	\foreignlanguage{russian}{\cite[30--48]{vernadsky1926biosfera}}.  See
+	\foreignlanguage{russian}{\cites[330--341]{vernadsky1994zhivoe}{vernadsky1926razmnozhenii1}{vernadsky1926razmnozhenii2}}.
+	Published under the title \foreignlanguage{russian}{\rtitle{О
+	размножении организмов и его значении в строении биосферы}} in the book
+	\foreignlanguage{russian}{\cite[75--101]{vernadsky1992trudy}}.
 }  It is, however, negligible in them in comparison to the usual biogeochemical
 energy, and has a hardly noticeable effect on the balance of nature, and that
 only in geological time.  It is connected to the psychological activity of
@@ -168,8 +167,8 @@ It is expressed in the respiration and feeding of organisms---``laws of
 nature'', which have not been discovered in their mathematical expression to
 this day, but the task of searching for whose expression was clearly laid out
 already in 1782 by C. Wolf at the St. Petersburg Academy of
-Sciences\footnoteRus{Петербургской Академии наук} at the time.\footnoteEd{
-	\cite{vernadsky1954sochineniya-p50}}
+Sciences\footnoteRus{Петербургской Академии наук} at the
+time.\foreignlanguage{russian}{\footcite[50]{vernadsky1954sochineniya}}
 
 Obviously, this biogeochemical energy, in this form, is characteristic of Homo
 sapiens, as well.  It is, as with all other living organisms, a species
@@ -263,11 +262,7 @@ reproduction of an organism of a single species is characteristic of all
 organisms, since the law for reproduction is expressed in the same form for
 all of them, in the form of a geometrical progression.  I have already
 indicated the major significance of this phenomenon long ago,\footnote{
-	See \cite{vernadsky1926biosfera-p37-38}. In the book
-	\cite{vernadsky1994zhivoe-p335}; \cite{vernadsky1926etudes1}.  In the
-	book \cite{vernadsky1994zhivoe-p413-424};
-	\cite{vernadsky1940biogeohimicheskie-p59-83}. In the book
-	\cite{vernadsky1992trudy-p75-101}.
+	See \cites[37--38]{vernadsky1926biosfera}[335, 413--424]{vernadsky1994zhivoe}{vernadsky1926etudes1}[59--83]{vernadsky1940biogeohimicheskie}[75--101]{vernadsky1992trudy}.
 } and I will return to it at the appropriate place in this book.
 
 The phenomenon of covering the whole surface of the planet by a given single
@@ -345,13 +340,10 @@ reproduction.
 
 The speed of reproduction\footnote{
 	On the speed of expansion of life see below.  See
-	\foreignlanguage{french}{\cite{vernadsky1926etudes1}} in the book
-	\foreignlanguage{russian}{\cite{vernadsky1994zhivoe-p413-424}\rtitle{Живое
-	вещество и биосфера}, с.~413--424};
-	\foreignlanguage{russian}{\cite{vernadsky1940biogeohimicheskie-p118-125}}
-	in the book
-	\foreignlanguage{russian}{\cite{vernadsky1994zhivoe-p437-444}};
-	\foreignlanguage{russian}{\cite{vernadsky1965himicheskoe-ch20}.}
+	\foreignlanguage{french}{\cite{vernadsky1926etudes1}};
+	\foreignlanguage{russian}{\cite[413--424, 437--444]{vernadsky1994zhivoe}};
+	\foreignlanguage{russian}{\cite[118--125]{vernadsky1940biogeohimicheskie}};
+	\foreignlanguage{russian}{\cite[Гл.~20]{vernadsky1965himicheskoe}.}
 }---the magnitude $V$ considered, in essence, by Nikolai, is based on the
 actually observed population of the planet by mankind in unfavorable for his
 life conditions.  We shall also see, further on, that there are still unknown
