--- a/tex/chapter-10.tex
+++ b/tex/chapter-10.tex
@@ -1,4 +1,6 @@
-\Chapter{.}
+\Chapter{%
+The biological sciences must come, together with the physical and the chemical
+sciences, among the sciences encompassing the noosphere.}
 
 151. But the contemporary state of biology and its excursions into philosophy
 are also detrimental to philosophy.
