--- a/tex/foreword-mingaleev.tex
+++ b/tex/foreword-mingaleev.tex
@@ -6,7 +6,7 @@ V. I. Vernadsky Electronic Archive\\
 The present electronic edition of V. I. Vendasky's book \rtitle{Scientific
 Thought as a Planetary Phenomenon\footnoteRus{Научная мысль как планетное
 явление}} was being prepared according to the
-edition\fullcite{vernadsky1938thought-yanshin91} at the end of 1999.
+edition\fullcite{vernadsky1991thought} at the end of 1999.
 
 The first four chapters were prepared by April, 2000, and added to the Maxim
 Moshkov library (\url{http://lib.ru/FILOSOF/WERNADSKIJ/}).  These first
@@ -23,7 +23,7 @@ Unfortunately, because of insufficient time, the work on the remaining chapters
 kept dragging on and on, to the point that I decided to use the electronic
 version of these chapters, which was prepared by the Russian Foundation for
 Fundamental Research\footnoteRus{Росийским Фондом фундаментальных исследований}
-from the edition \fullcite{vernadsky1938thought-feniks97}.
+from the edition \fullcite{vernadsky1997thought}.
 
 However, comparing these two editions, it seemed to me, that the earlier one,
 from 1991, was much closer to the original text of V. I. Vernadsky.  The 1997
