--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -10,7 +10,7 @@ Vernadsky}\\[4ex]
 \begin{center}
 	\textit{The electronic version of the preface and the remarks was
 	prepared from the edition in the book
-	\fullcite{vernadsky1938thought-yanshin91}.}
+	\fullcite{vernadsky1991thought}.}
 \end{center}
 }%
 \footnotetextTransl{\foreignlanguage{russian}{Комиссия по разработке научного
@@ -129,5 +129,29 @@ F.~Lukyanov\footnoteRus{Ф. Лукьянов} wrote:
   Phenomenon}, created in the period between the 1880s and 1940s, and either
   completely disappeared, or long ago become bibliographic rarity.
 \end{quotation}
+
+During the preparation of the present edition of V.~I.\ Vernadsky's
+\tciteo{vernadsky1991thought} for publication its text was compared
+with the manuscript of S.~N.\ Zhidovinov\footnoteRus{С. Н. Жидовиновым} once
+again, with the help of collaborators from the Archive of the Academy of
+Sciences of the USSR,\footnoteRus{Архива АН СССР} which enabled the correction
+of some small inaccuracies, unnoticed in the previous editions, as well as the
+restoration of the author's style, orthography, and punctuation where possible.
+
+What does the book offered to the reader's attention present?  It is necessary
+to shortly pause for a look at the development of V.~I.\ Vernadsky's ideas,
+which have found their fullest reflection in this work, to answer this
+question.
+\medskip
+
+It follows from letters to his wife Natalya Egorovna\footnoteRus{Наталье
+Егоровне}, and to a few scientists, as well as from preserved diaries of
+Vladimir Ivanovich, that his attention was attracted by the ever-increasing
+technological might of mankind, which became comparable in its scale to the
+most formiddable geological processes, already in his early years, i.~e.\
+already at the end of the last century.  This activity irreversibly changes the
+face of the whole Earth, of all of its nature in the physico-geographical and
+chemical aspect.  (V.~I.\ Vernadsky didn't yet use the term `biosphere' at that
+time.)
 
 . . .
