--- a/tex/titlepages.tex
+++ b/tex/titlepages.tex
@@ -12,7 +12,7 @@
 
 \bigskip
 \Large{Translated from Russion by Pavel M. Penev for the LaRouche movement.}
-\foreignlanguage{russian}{\nocite{vernadsky1938thought-lib.ru}}
+\foreignlanguage{russian}{\nocite{vernadsky2001thought}}
 
 October 20, 2010--present
 
